// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders correctly with custom label 1`] = `
[
  <label
    htmlFor="test123"
  />,
  <span
    className="Checkbox3575272054__root Checkbox3575272054---vol-1-1"
  >
    <span
      className="Checkbox3575272054__inputContainer"
    >
      <input
        checked={false}
        className="Checkbox3575272054__input"
        disabled={false}
        id="test123"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        type="checkbox"
      />
    </span>
  </span>,
]
`;

exports[`Checkbox renders correctly with label 1`] = `
<label
  className="Label3314882859__root Label3314882859--hasInput Checkbox3575272054__root Checkbox3575272054---vol-1-1"
>
  <span
    className="Label3314882859__labelText"
  >
    Subscribe
  </span>
  <span
    className="Checkbox3575272054__inputContainer"
  >
    <input
      checked={false}
      className="Checkbox3575272054__input"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDragStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="checkbox"
    />
  </span>
</label>
`;
